Fixing zoom on mobile.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -98,10 +98,12 @@ h2 {
 }
 
 .button-wrapper {
+	position:relative;
 	display:flex;
 	align-items: baseline;
 	justify-content:center;
-	width: 380px;
+	max-width: 380px;
+	width: 70%;
 }
 
 .button-wrapper.center {
